--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -6,21 +6,65 @@
     <meta name="description" content="Basic example for Seek Position component."></meta>
     <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
     <script src="../../dist/aframe-seek-position-component.min.js"></script>
+    <!--<script src="../../dist/aframe-seek-position-component.js"></script>-->
   </head>
   <body>
     <a-scene>
       <a-assets>
-        <img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
-        <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
+        <img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg" crossorigin="anonymous">
+        <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg" crossorigin="anonymous">
       </a-assets>
 
-      <a-entity seek-position=""></a-entity>
+      <a-entity id="itemsContainer">
+        <a-sphere color="red" seek-position="-3 1 -10" position="0 1 -50" radius="0.5"></a-sphere>
+        <a-sphere color="#ff3300" seek-position="-2 1 -10" radius="0.5"></a-sphere>
+        <a-sphere color="yellow" seek-position="-1 1 -10" position="0 1 -50" radius="0.5"></a-sphere>
+        <a-sphere color="green" seek-position="0 1 -10" radius="0.5"></a-sphere>
+        <a-sphere color="cyan" seek-position="1 1 -10" position="0 1 -50" radius="0.5"></a-sphere>
+        <a-sphere color="blue" seek-position="2 1 -10" radius="0.5"></a-sphere>
+        <a-sphere color="purple" seek-position="3 1 -10" position="0 1 -50" radius="0.5"></a-sphere>
+      </a-entity>
+
+      <a-entity text="value:Press Space Bar;baseline:bottom;align:center;" scale="10 10 10" position="0 0.1 -5"></a-entity>
 
       <a-plane src="#groundTexture" rotation="-90 0 0" height="100" width="100"></a-plane>
       <a-light type="ambient" color="#445451"></a-light>
       <a-light type="point" intensity="2" position="2 4 4"></a-light>
       <a-sky height="2048" radius="30" src="#skyTexture" theta-length="90" width="2048"></a-sky>
     </a-scene>
+
+    <script>
+
+function shuffle()
+{
+  var items = document.getElementById("itemsContainer").getChildEntities();
+  items.forEach(function(item)
+  {
+    item.setAttribute("seek-position",
+    {
+      x: random(-5, 5),
+      y: random(1, 5),
+      z: random(-5, -15),
+    })
+  })
+}
+
+document.addEventListener("keydown", function(e)
+{
+  switch(e.key)
+  {
+    case " ":
+      shuffle();
+      break;
+  }
+});
+
+random = function(min, max)
+{
+  return (Math.random() * (max - min)) + min;
+}
+
+    </script>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/greengiant83/aframe-seek-position-component" class="github-corner">
